# matriculacion_vehicular

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: main.c.3D56315A6C61C719.idx  main.cpp.50F830237022C389.idx  matriculaVehicular.c.19350E7C67CE2216.idx  matriculaVehicular.h.BC696BE86651E53A.idx
data/: comprobantes.txt  usuarios.txt  vehiculos.txt
header/: login.h  matriculaVehicular.h  utilidades.h  validaciones.h
src/: login.c  main.c  matriculaVehicular.c  utilidades.c  validaciones.c
